test/files/neg/t712.check
t712.scala:10: error: overloaded method coerce needs result type
  implicit def coerce(p : ParentImpl) = p.self;
                                          ^
1 error
